fix of select background on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,9 @@
 }
 
 @media (min-width: 721px) {
+  .container {
+    padding: 81px 0px 164px 0px;
+  }
   .header {
     margin-bottom: 74px;
   }
