--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -17,6 +17,7 @@
   height: 29px;
   border: 0;
   outline: none;
+  background-color: #FFFFFF;
 }
 
 .search-form__select:invalid {
